--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,8 +1,16 @@
 name: Hello world
 on: workflow_dispatch
 jobs: 
-      print-hello-world:
+      print-hello-world-linux:
         runs-on: ubuntu-latest
         steps:
             - run: echo "Hello World"
+              name: Print Hello World
+        
+      print-hello-world-windows:
+        runs-on:  windows-latest
+        steps:
+            - name: Print Hello
+              run: echo "Hello"
+              
           
