--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -3,6 +3,7 @@ on: workflow_dispatch
 jobs: 
       print-hello-world-linux:
         runs-on: ubuntu-latest
+        if: github.repository_owner == "ris*"
         steps:
             - run: echo "Hello World"
               name: Print Hello World
