--- a/.github/workflows/repo-dispatch.yaml
+++ b/.github/workflows/repo-dispatch.yaml
@@ -1,9 +1,9 @@
 on:
   repository_dispatch:
-    types: [on-oas-updated]
+    types: [on-src-updated]
 jobs:
   do-the-thing:
     runs-on: ubuntu-latest
     steps:
       - name: Process update
-        run: echo "${{ github.event.client_payload.openapi_file_path }}"
+        run: echo "Trigger Successful"
